# laradock

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker-configs/composer/: composer.Dockerfile
docker-configs/nginx/: nginx.conf
docker-configs/php-fpm/: php.Dockerfile
