[tool.poetry]
name = "laradock"
version = "0.1.0"
description = ""
authors = ["Lycheejam <lycheejamwow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
yamllint = "^1.17"
pre-commit = "^1.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
